--- a/ovtlyr/home.html
+++ b/ovtlyr/home.html
@@ -33,9 +33,9 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#" class="live_item"><img src="images/live.png" alt="Live" /></a></li>
-              <li><a href="log-in.html">Log In</a></li>
-              <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
+              <li><a href="https://www.youtube.com/@ovtlyrdotcom/streams" class="live_item" target="_blank"><img src="images/live.png" alt="Live" /></a></li>
+              <li><a href="log-in.html">Logout</a></li>
+              <li><a href="sign-up.html" class="signUp_btn">Dashboard</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
             </ul>
             <div class="mobile_menu">
@@ -47,7 +47,7 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="#">Pricing</a></li>
-                  <li><a href="#" class="live_item"><img src="images/live.png" alt="Live" /></a></li>
+                  <li><a href="https://www.youtube.com/@ovtlyrdotcom/streams" class="live_item" target="_blank"><img src="images/live.png" alt="Live" /></a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -172,7 +172,7 @@
         </div>
         <div class="indexSec_42">
           <video width="100%" controlsList="noplaybackrate nodownload" controls disablepictureinpicture poster="images/mark-story-thumbnail1.png">
-            <source src="images/marks-video.mp4" type="video/mp4">
+            <source src="images/marks-video-min.mp4" type="video/mp4">
           </video>
         </div>
         <div class="indexSec_43">
@@ -318,7 +318,14 @@
       <div class="container">
         <div class="testimonial_box">
           <h2>Testimonial</h2>
-          <div class="loop owl-carousel owl-theme">
+          <div class="testimonial_box">
+            <div class="video_sec">
+              <video width="100%" controlsList="noplaybackrate nodownload" controls disablepictureinpicture poster="images/mark-story-thumbnail.png">
+                <source src="images/testimonial-video.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+          <!-- <div class="loop owl-carousel owl-theme">
             <div class="item">
               <div class="testimonial_box">
                 <div class="video_sec">
@@ -326,13 +333,13 @@
                     <source src="images/testimonial-video.mp4" type="video/mp4">
                   </video>
                 </div>
-                <!-- <div class="testimonalBox">
+                <div class="testimonalBox">
                   <p>Jack Smith</p>
                   <h6>San Francisco, CA</h6>
-                </div> -->
+                </div>
               </div>
             </div>
-            <!-- <div class="item">
+            <div class="item">
               <div class="testimonial_box">
                 <div class="video_sec">
                   <video width="100%" controlsList="noplaybackrate nodownload" controls disablepictureinpicture poster="images/mark-story-thumbnail.png">
@@ -344,8 +351,8 @@
                   <h6>San Francisco, CA</h6>
                 </div>
               </div>
-            </div> -->
-          </div>
+            </div>
+          </div> -->
           <a href="#" class="trial_btn">Start Your Free Trial Today</a>
           <p>21-Day Risk Free Trial</p>
         </div>
@@ -555,14 +562,13 @@
               <ul>
                 <li><a href="features.html">Features</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="#">Live</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="https://www.youtube.com/@ovtlyrdotcom/streams" target="_blank">Live</a></li>
+                <li><a href="https://blog.ovtlyr.com/" target="_blank">Blog</a></li>
               </ul>
             </div>
             <div>
               <h5>Socials</h5>
               <ul>
-                <li><a href="#" target="_blank">Discord</a></li>
                 <li><a href="https://www.instagram.com/ovtlyrinc/" target="_blank">Instagram</a></li>
                 <li><a href="https://twitter.com/ovtlyr" target="_blank">Twitter</a></li>
                 <li><a href="https://www.facebook.com/Ovtlyr/" target="_blank">Facebook</a></li>
@@ -583,7 +589,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <!--====== TESTIMONIALS SLIDER SCRIPT ======--> 
-  <script src="js/owl.carousel.js"></script>
+<!--   <script src="js/owl.carousel.js"></script>
   <script>
     jQuery(document).ready(function($) {
       $('.loop').owlCarousel({
@@ -598,7 +604,7 @@
         autoplayHoverPause:true
       });
     });
-  </script>
+  </script> -->
   <!--======= MOBILE MENU START =======-->
   <script>
     (function() {
