--- a/ovtlyr/log-in.html
+++ b/ovtlyr/log-in.html
@@ -29,6 +29,10 @@
                   <div class="social_links"><img src="images/google-img.svg" alt="Google" /></div>
                   <p>Login with Google</p>
                 </a>
+                <a href="#">
+                  <div class="social_links"><img src="images/apple-img.svg" alt="Apple" /></div>
+                  <p>Login with Apple</p>
+                </a>
               </div>
               <div class="signup_links2">
                 <div class="sides_border"></div>
