--- a/ovtlyr/pricing3.html
+++ b/ovtlyr/pricing3.html
@@ -12,11 +12,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Adashboard%3A" />
-<link rel="stylesheet" media="all" href="css/app.css">
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/chart.css" />
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/responsive.css" />
 <script>
 var viewportmeta = document.querySelector('meta[name="viewport"]');
 if(viewportmeta) {
@@ -42,10 +39,11 @@ if (localStorage.getItem('darkMode') === "on") {
 <div class="page">
   <div class="page__center">
     <div class="dashboard_cont">
-      <div class="pageHeading">
-        <div>
-          <div>
-            <button type="button"><span class="material-symbols-outlined">chevron_left</span><h6>Back</h6></button>
+      <div class="pageHeading w-100">
+        <div class="w-100">
+          <div class="w-100 justify-content-between">
+            <button type="button" class="d-flex align-items-center"><span class="material-symbols-outlined">chevron_left</span><h6>Back</h6></button>
+            <button type="button" class="d-flex align-items-center"><span class="material-symbols-outlined" style="font-size: 26px;">logout</span><h6>Logout</h6></button>
           </div>
         </div>
       </div>
@@ -110,7 +108,7 @@ if (localStorage.getItem('darkMode') === "on") {
                       <li>Coverage of over 1,600 highly liquid stocks & ETFs</li>
                       <li>Favorite List</li>
                       <li>Bull & Bear Lists</li>
-                      <li>Basic Fundamental Info & Price Charts</li>
+                      <li>Basic Fundamental Info & Price Charts</li> 
                     </ul>
                   </div>
                   <div class="pric_sec2100 pric_sec216">
@@ -229,14 +227,9 @@ if (localStorage.getItem('darkMode') === "on") {
   </div>
 </div>
 <!-- scripts -->
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/owl.carousel.min.js"></script>
-<script src="js/lib/svg4everybody.min.js"></script>
-<script src="js/lib/jquery.magnific-popup.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/sorttable.js"></script>
+<script src="js/magnific-popup-svg4-app.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <!--========= SIDEBAR SEARCH DROPDOWN START =========-->
 <script>
   $(document).ready(function(){
