--- a/ovtlyr/sign-up.html
+++ b/ovtlyr/sign-up.html
@@ -61,6 +61,10 @@
                       <div class="social_links"><img src="images/google-img.svg" alt="Google" /></div>
                       <p>Login with Google</p>
                     </a>
+                    <a href="#" id="appleid-signin" class="appleid-signin">
+                      <div class="social_links"><img src="images/apple-img.svg" alt="Apple" /></div>
+                      <p>Login with Apple</p>
+                    </a>
                   </div>
                   <div class="signup_links2">
                     <div class="sides_border"></div>
