--- a/ovtlyr/stock-detail2.html
+++ b/ovtlyr/stock-detail2.html
@@ -11,11 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" media="all" href="css/app.css">
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/chart.css" />
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/responsive.css" />
 <script>
 var viewportmeta = document.querySelector('meta[name="viewport"]');
 if(viewportmeta) {
@@ -312,14 +309,9 @@ if (localStorage.getItem('darkMode') === "on") {
   </div>
 </div>
 <!-- scripts-->
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/owl.carousel.min.js"></script>
-<script src="js/lib/svg4everybody.min.js"></script>
-<script src="js/lib/jquery.magnific-popup.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/sorttable.js"></script>
+<script src="js/magnific-popup-svg4-app.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <!--==== ADD TO FAV TOGGLE ====-->
 <script>
 $(document).ready(function(){
