--- a/ovtlyr/subscription.html
+++ b/ovtlyr/subscription.html
@@ -11,11 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" media="all" href="css/app.css">
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/chart.css" />
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/responsive.css" />
 <script>
 var viewportmeta = document.querySelector('meta[name="viewport"]');
 if(viewportmeta) {
@@ -259,7 +256,7 @@ if (localStorage.getItem('darkMode') === "on") {
                         </div>
                       </div>
                       <div class="serial2">
-                        <h3 class="show_txt" style="display: block;">$15<span>/month</span></h3>
+                        <h3 class="show_txt" style="display: block;"><del>$15</del> $10<span>/month</span> <span class="small">(10% coupon applied)</span></h3>
                         <h3 class="hide_txt" style="display: none;">$10<span>/month</span></h3>
                         <p class="hide_txt" style="display: none;">$120, Billed Annually</p>
                       </div>
@@ -330,6 +327,23 @@ if (localStorage.getItem('darkMode') === "on") {
                       </div>
                     </div>
                   </div>
+                  <div class="plan_boxes mt-4" style="display: none;">
+                    <div class="plan_boxes1 blue_box">
+                      <div class="serial1">
+                        <div class="serial11">
+                          <h4>Trial Plan</h4>
+                        </div>
+                      </div>
+                      <div class="serial2">
+                        <input type="text" placeholder="Enter Coupon Code" />
+                      </div>
+                      <div class="serial3">
+                        <div class="serial31">
+                          <a href="#" class="white_btn">Apply</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="subscription_b1">
                   <h6>Payment Method</h6>
@@ -344,7 +358,7 @@ if (localStorage.getItem('darkMode') === "on") {
                         <span>**** **** **** <span>4575</span></span>
                       </div>
                       <div class="card_dlt">
-                        <button type="button"><span class="material-symbols-outlined">remove</span></button>
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#deleteCard_modal"><span class="material-symbols-outlined">remove</span></button>
                       </div>
                     </div>
                     <div class="card_boxes1">
@@ -495,7 +509,7 @@ if (localStorage.getItem('darkMode') === "on") {
                         <h6>We are offering you a 10% discount off your current subscription (<s>$120</s> $108 will be charged from the next billing cycle) if you stay.</h6>
                       </div>
                       <div class="modal_btns">
-                        <a href="#" class="border_btn" data-bs-dismiss="modal" aria-label="Close">Yes, I want to take this offer</a>
+                        <a href="#" class="border_btn" data-bs-dismiss="modal" aria-label="Close" data-bs-toggle="modal" data-bs-target="#applyOffer_modal4">Yes, I want to take this offer</a>
                         <a href="#" class="filled_btn" data-bs-dismiss="modal" aria-label="Close" data-bs-toggle="modal" data-bs-target="#cancelPlan_modal3">No, I still want to Cancel</a>
                       </div>
                     </div>
@@ -520,6 +534,44 @@ if (localStorage.getItem('darkMode') === "on") {
                 </div>
               </div>
               <!--======== CANCEL PLAN POPUP 3 END =========-->
+              <!--======== CANCEL PLAN POPUP 4 BEGIN ========-->
+              <div class="modal upgrade_popup fade" id="applyOffer_modal4" tabindex="-1" aria-labelledby="applyOffer_modalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <button type="button" class="close_btn" data-bs-dismiss="modal" aria-label="Close"><span class="material-icons">close</span></button>
+                      <div class="modal_body">
+                        <h5>Get 10% Discount</h5>
+                        <div class="coupon_div modal_btns">
+                          <input type="text" placeholder="Enter Coupon Code" />
+                          <a href="#" class="filled_btn" data-bs-dismiss="modal" aria-label="Close">Apply</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--======== CANCEL PLAN POPUP 1 END =========-->
+
+              <!--======== DELATE CARD POPUP BEGIN ========-->
+              <div class="modal upgrade_popup fade" id="deleteCard_modal" tabindex="-1" aria-labelledby="deleteCard_modalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <button type="button" class="close_btn" data-bs-dismiss="modal" aria-label="Close"><span class="material-icons">close</span></button>
+                      <div class="modal_body">
+                        <h5>Delete Card</h5>
+                        <p>Are you sure you want to delete your card?</p>
+                      </div>
+                      <div class="modal_btns">
+                        <a href="#" class="border_btn" data-bs-dismiss="modal" aria-label="Close">No</a>
+                        <a href="#" class="filled_btn" data-bs-dismiss="modal" aria-label="Close">Yes</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--======== DELATE CARD POPUP END =========-->
             </div>
           </div>
         </div>
@@ -528,14 +580,9 @@ if (localStorage.getItem('darkMode') === "on") {
   </div>
 </div>
 <!-- scripts-->
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/owl.carousel.min.js"></script>
-<script src="js/lib/svg4everybody.min.js"></script>
-<script src="js/lib/jquery.magnific-popup.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/sorttable.js"></script>
+<script src="js/magnific-popup-svg4-app.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script>
 $('.select_drop').click(function (evt) {
     evt.stopPropagation();
