--- a/ovtlyr/notification.html
+++ b/ovtlyr/notification.html
@@ -115,6 +115,14 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span><a href="activity.html">Activity</a></span>
                 <span class="active"><a href="notification.html">Notification Management</a></span>
               </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="#">
+                  <div class="sidebar__icon">
+                    <img src="images/referer.svg" alt="Referer" />
+                  </div>
+                  <div class="sidebar__text">Become a Referer</div>
+                </a>
+              </div>
               <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
@@ -259,6 +267,125 @@ if (localStorage.getItem('darkMode') === "on") {
                     </span>
                   </li>
                 </ul>
+              </div>
+              <div class="notifiLogs" style="display: none;">
+                <h6>Sep 05, 2023 | 05:00 AM</h6>
+                <ul>
+                  <li>
+                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
+                  </li>
+                  <li>
+                    <p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p>
+                  </li>
+                  <li>
+                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
+                  </li>
+                  <li>
+                    <p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p>
+                  </li>
+                  <li>
+                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="subscription_b1 notifiLogs">
+                <h6>Activity Logs</h6>
+                <div class="notifiLog_table">
+                  <div class="table_scroll vertical_scroll horizontal_scroll">
+                    <table class="table notiLog__table ovtlyr_table">
+                      <thead>
+                        <tr class="ovtlyr__row_head">
+                          <th style="width: 30%;">Date</th>
+                          <th style="width: 20%;">Alert</th>
+                          <th style="width: 50%;">Description</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p class="buy_stock">Buy</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p></td>
+                        </tr>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p class="sell_stock">Sell</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p></td>
+                        </tr>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p>Recovery</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p></td>
+                        </tr>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p class="buy_stock">Buy</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p></td>
+                        </tr>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p>Down Cycle</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="favList_grid">
+                  <div class="favList_item">
+                    <p>
+                      <span>Date</span>
+                      <span>01-02-2023</span>  
+                    </p>
+                    <p>
+                      <span>Details</span>
+                      <span>Paid Plan</span>
+                    </p>
+                    <p>
+                      <span>Amount</span>
+                      <span>$20.00</span>
+                    </p>
+                    <p>
+                      <span>Download</span>
+                      <span><a href="#">Invoice 25 Feb</a></span>
+                    </p>
+                  </div>
+                  <div class="favList_item active">
+                    <p>
+                      <span>Date</span>
+                      <span>01-02-2023</span>  
+                    </p>
+                    <p>
+                      <span>Details</span>
+                      <span>Paid Plan</span>
+                    </p>
+                    <p>
+                      <span>Amount</span>
+                      <span>$20.00</span>
+                    </p>
+                    <p>
+                      <span>Download</span>
+                      <span><a href="#">Invoice 25 Feb</a></span>
+                    </p>
+                  </div>
+                  <div class="favList_item">
+                    <p>
+                      <span>Date</span>
+                      <span>01-02-2023</span>  
+                    </p>
+                    <p>
+                      <span>Details</span>
+                      <span>Paid Plan</span>
+                    </p>
+                    <p>
+                      <span>Amount</span>
+                      <span>$20.00</span>
+                    </p>
+                    <p>
+                      <span>Download</span>
+                      <span><a href="#">Invoice 25 Feb</a></span>
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
