--- a/email-templates/notification-alert-email.html
+++ b/email-templates/notification-alert-email.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>How to trade the S&P 500 and other Sectors</title>
+<title>OVTLYR Watchlist - New Alert Notification</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
@@ -121,14 +121,6 @@ table {
                   </div>
                 </td>
               </tr>
-              <tr align="left" width="100%" style="margin: 0;">
-                <td align="left" width="100%" style="height: 30px;font-size: 30px;line-height: 30px;"></td>
-              </tr>
-              <tr align="center" width="100%" style="margin: 0;">
-                <td align="center" width="100%" style="height: 20px;font-size: 20px;line-height: 20px;padding: 10px;background-color: #4285F4;font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #ffffff;font-size: 17px;line-height: 25px;font-weight: normal;text-decoration: none !important;border-radius: 3px !important;" target="_blank">
-                  <a href="https://calendly.com/mahesh-wwu/30min?month=2023-07" style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #ffffff;font-size: 17px;line-height: 25px;font-weight: normal;text-decoration: none !important;width: 100%;display: block;" target="_blank">Book a 1-on-1 Demo with our Co-Founder</a>
-                </td>
-              </tr>
             </tbody>
           </table>
         </td>
@@ -144,7 +136,7 @@ table {
                       <tr align="left" width="100%" style="margin: 0;">
                         <td width="100%" class="body_part1">
                           <div>
-                            <h3 style="font-size: 28px;line-height: 40px;font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-weight: 600;margin-top: 0;margin-bottom: 0;color: #000000;">How to trade the S&amp;P 500 and other Sectors</h3>
+                            <h3 style="font-size: 28px;line-height: 40px;font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-weight: 600;margin-top: 0;margin-bottom: 0;color: #000000;">OVTLYR Watchlist - New Alert Notification</h3>
                           </div>
                         </td>
                       </tr>
@@ -158,26 +150,19 @@ table {
               <tr align="left" width="100%" style="margin: 0;">
                 <td width="100%" class="body_part1">
                   <div>
-                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 15px;">It's Mahesh again with a followup to our last video. Today, I want to share a behind-the-scenes look at how I analyze charts and find trading opportunities across the S&amp;P 500 and other sectors.</p>
-                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: 600;margin-top: 0;margin-bottom: 15px;">Click the Video Below<img src="hand.png" alt="Hand" style="vertical-align: middle;margin-left: 10px;"></p><a href="https://youtu.be/o8IgoMUPv_k" target="_blank"><img src="ovtlyr-sandp-500.png" alt="Video Thumbnail" style="width: 100%;"></a>
-                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 20px;margin-bottom: 15px;">In this video, I'll show you how I use OVTLYR's powerful tools to identify signals and patterns in the market, and how I leverage this information to make informed trades. You'll also get a sneak peek at some of the sectors I'm currently watching closely for potential opportunities.</p><p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 20px;">I believe that with the right tools and knowledge, anyone can achieve success in trading. That's why I'm passionate about sharing my insights and strategies with you. Thank you for being a part of OVTLYR’s valued community, and I look forward to continuing to support your trading journey.</p>
-                  </div>
+                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 15px;">A New alert has been issued for the following stocks/etfs from your Favorite List:-</p>
+                    
+                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 2px;"><a href="https://ovtlyr.com/stocks-etfs/AAPL" style="color: #4285F4;text-decoration: none !important;" target="_blank">AAPL</a></p>
+                  <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 2px;"><a href="https://ovtlyr.com/stocks-etfs/NVDA" style="color: #4285F4;text-decoration: none !important;" target="_blank">NVDA</a></p></div>
                 </td>
               </tr>
               <tr align="left" width="100%" style="margin: 0;">
-                <td width="100%" class="body_part3">
-                  <div>
-                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #000000;font-size: 17px;line-height: 24px;font-weight: 600;margin-top: 0;margin-bottom: 10px;">Best Regards,</p>
-                    <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #000000;font-size: 17px;line-height: 24px;font-weight: 600;margin-top: 0;margin-bottom: 2px;">Mahesh</p><p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #000000;font-size: 17px;line-height: 24px;font-weight: 600;margin-top: 0;margin-bottom: 0;">Co-Founder, OVTLYR</p>
-                  </div>
-                </td>
+                <td align="left" width="100%" style="height: 20px;font-size: 20px;line-height: 20px;"></td>
               </tr>
-              <tr align="left" width="100%" style="margin: 0;">
-                <td align="left" width="100%" style="height: 30px;font-size: 30px;line-height: 30px;"></td>
-              </tr>
+              
               <tr align="left" width="100%" style="margin: 0;">
                 <td width="100%">
-                  <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 0;">P.S. Don’t forget to like and subscribe to our <a href="https://www.youtube.com/@ovtlyrdotcom" style="color: #4285F4;text-decoration: none !important;" target="_blank">Youtube channel</a> where I’ll detail how to ensure your first trade using OVTLYR is a success</p>
+                  <p style="font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;color: #333333;font-size: 17px;line-height: 25px;font-weight: normal;margin-top: 0;margin-bottom: 0;">This is an automatically generated email. You are receiving this message because you have enabled the Watchlist Alert notifications. Manage your notifications <a href="https://ovtlyr.com/notification" style="color: #4285F4;text-decoration: none !important;" target="_blank">here</a>.</p>
                 </td>
               </tr>
             </tbody>
@@ -230,6 +215,9 @@ table {
       </tr>
     </tbody>
   </table>
+
+
+
 
 </body>
 </html>
